objects/ASI_CRM_Volume_Potential_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spirit &amp; Champagne</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Volume Potential Thresholds</relationshipLabel>
        <relationshipName>ASI_CRM_Volume_Potential_Thresholds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Max_Weight__c</fullName>
        <label>Maximum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential_Id__c</fullName>
        <formula>ASI_CRM_SG_Volume_Potential__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential_Name__c</fullName>
        <formula>TEXT( ASI_CRM_SG_Volume_Potential__r.ASI_CRM_SG_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential__c</fullName>
        <label>Volume Potential</label>
        <referenceTo>ASI_CRM_Volume_Potential__c</referenceTo>
        <relationshipLabel>Volume Potential Thresholds</relationshipLabel>
        <relationshipName>ASI_CRM_Volume_Potential_Thresholds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Volume Potential Threshold</label>
    <listViews>
        <fullName>ASI_CRM_VN_All_Volume_Potential_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_Category__c</columns>
        <columns>ASI_CRM_Volume__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Volume_Potential_Threshold__c.ASI_CRM_VN_Volume_Potential_Level_Threshold</value>
        </filters>
        <label>All VN Volume Potential Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Min_Weight__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VPT-{0000}</displayFormat>
        <label>Volume Potential Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Potential Thresholds</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Gross_Sale</fullName>
        <active>true</active>
        <label>ASI CRM MY Gross Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Market_Share</fullName>
        <active>true</active>
        <label>ASI CRM MY Market Share</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Volume_Potential_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM MY Volume Potential Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Volume_Potential_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM TH Volume Potential Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Volume_Potential_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM TW Volume Potential Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Volume_Potential_Level_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM VN Volume Potential Level Threshold</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>